--- a/02-templates/index.html
+++ b/02-templates/index.html
@@ -4,16 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    <h1>Hola!! los miembros son:</h1>
+    <!-- <h1>Hola!! los miembros son:</h1>
     <h3>{{ .Name }} con edad {{.Edad}}</h3>
 
-    <!-- VARIABLES -->
+     VARIABLES 
 
     {{with $valor := "Mi variable"}}
         <p>{{$valor}}</p>
-    {{ end }}
+    {{ end }} -->
+
+    <!-- Operadores logicos
+        not     !
+        and     &&
+        or      ||
+    -->
+    <!-- Operadores condicionale
+        eq      ==
+        ne      !=
+        lt      <
+        le      <=
+        gt      >
+        ge      >=
+    -->
+
+    <h1>Usuarios:</h1>
+    {{ if .Status }}
+        <p>Usuario activo en la plataforma</p>
+    {{else}}
+        <p>Usuario NO esta activo</p>
+    {{end}}
+
+    {{ if (and .Status .Admin )}}
+        <p>Eres admin y estas activo</p>
+    {{else}}
+        <p>No cuentas con rango administrador o no estas activo</p>
+    {{end}}
+
+
+    {{if gt .Edad 22}}
+        <p>Es mayor a 22 ages</p>
+    {{end}}
 </body>
 </html>
