Send functions to html added

--- a/02-templates/index.html
+++ b/02-templates/index.html
@@ -7,6 +7,9 @@
     <title>Index</title>
 </head>
 <body>
+
+    <p>{{ saludar "Sota"}}</p>
+
     <!-- <h1>Hola!! los miembros son:</h1>
     <h3>{{ .Name }} con edad {{.Edad}}</h3>
 
@@ -30,7 +33,7 @@
         ge      >=
     -->
 
-    <h1>Usuarios:</h1>
+    <!-- <h1>Usuarios:</h1>
     {{ if .Status }}
         <p>Usuario activo en la plataforma</p>
     {{else}}
@@ -52,6 +55,9 @@
         {{range .Cursos}}
             <li>{{.Name}}</li>
         {{end}}
-    </ul>
+    </ul> -->
+
+    
+
 </body>
 </html>
