--- a/02-templates/index.html
+++ b/02-templates/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-    <p>{{ saludar "Sota"}}</p>
+    {{template "header"}}
+
+    <h3>Hola {{ .Name }}</h3>
+    <p>Edad {{ .Edad }}</p>
+
+    {{template "footer"}}
+
+    <!-- <p>{{ saludar "Sota"}}</p> -->
 
     <!-- <h1>Hola!! los miembros son:</h1>
     <h3>{{ .Name }} con edad {{.Edad}}</h3>
